--- a/src/pdp/Makefile.am
+++ b/src/pdp/Makefile.am
@@ -57,8 +57,6 @@ TAHEADS =\
 	$(TAHEADS_GUI)
 
 HEADS =\
-	pdp_TA_type.h \
-	pdp_TA_inst.h \
 	pdpdeclare.h \
 	pdpbase.h \
 	spec.h \
@@ -89,7 +87,6 @@ SRCS =\
 	pdplog.cpp \
 	pdpshell.cpp \
 	$(SRCS_GUI) \
-	pdp_TA.cpp \
 	pdp_ti.cpp
 
 include $(top_srcdir)/Maketa.am
@@ -97,8 +94,8 @@ include $(top_srcdir)/Moc.am
 include $(top_srcdir)/mfstamp.am
 
 lib_LTLIBRARIES = libpdp@PDP_SUFFIX@.la
+libpdp@PDP_SUFFIX@_la_DEPENDENCIES = libpdpTypeAccess@PDP_SUFFIX@.la
 libpdp@PDP_SUFFIX@_la_SOURCES = $(HEADS) $(SRCS)
-
 libpdp@PDP_SUFFIX@_la_CPPFLAGS =\
 	-I@abs_top_builddir@ \
 	-I@srcdir@ \
@@ -106,17 +103,24 @@ libpdp@PDP_SUFFIX@_la_CPPFLAGS =\
 	-I@srcdir@/../css \
 	-I@srcdir@/../tamisc \
 	-I@srcdir@/../taiqtso
+libpdp@PDP_SUFFIX@_la_CXXFLAGS = -O2
+libpdp@PDP_SUFFIX@_la_LIBADD = libpdpTypeAccess@PDP_SUFFIX@.la
+
+noinst_LTLIBRARIES = libpdpTypeAccess@PDP_SUFFIX@.la
+libpdpTypeAccess@PDP_SUFFIX@_la_SOURCES = pdp_TA.cpp pdp_TA_type.h pdp_TA_inst.h
+libpdpTypeAccess@PDP_SUFFIX@_la_CPPFLAGS = $(libpdp@PDP_SUFFIX@_la_CPPFLAGS)
+libpdpTypeAccess@PDP_SUFFIX@_la_CXXFLAGS = -g -O0
+
 bin_PROGRAMS = pdp@PDP_SUFFIX@++
-
+pdp@PDP_SUFFIX@___DEPENDENCIES = libpdp@PDP_SUFFIX@.la
 pdp@PDP_SUFFIX@___SOURCES = main.cpp
-
 pdp@PDP_SUFFIX@___LDADD =\
-	libpdp@PDP_SUFFIX@.la \
+	@abs_top_builddir@/src/pdp/libpdp@PDP_SUFFIX@.la \
 	@abs_top_builddir@/src/ta/libta@PDP_SUFFIX@.la \
 	@abs_top_builddir@/src/css/libcss@PDP_SUFFIX@.la \
 	@abs_top_builddir@/src/tamisc/libtamisc@PDP_SUFFIX@.la
-
 pdp@PDP_SUFFIX@___CPPFLAGS = $(libpdp@PDP_SUFFIX@_la_CPPFLAGS)
+pdp@PDP_SUFFIX@___CXXFLAGS = $(libpdp@PDP_SUFFIX@_la_CXXFLAGS)
 
 BUILT_SOURCES = pdp_TA_type.h
 CLEANFILES += pdp_TA.ccx
