--- a/src/bp/Makefile.am
+++ b/src/bp/Makefile.am
@@ -14,31 +14,20 @@ TAHEADS =\
 	@abs_srcdir@/../bp/rbp.h
 
 HEADS =\
-	bp_TA_type.h \
-	bp_TA_inst.h \
 	bp.h \
 	rbp.h
 
 SRCS =\
 	bp.cpp \
 	rbp.cpp \
-	bp_TA.cpp \
 	main.cpp
 
 include $(top_srcdir)/Maketa.am
 include $(top_srcdir)/mfstamp.am
 
-bin_PROGRAMS = bp@PDP_SUFFIX@++
-
-bp@PDP_SUFFIX@___SOURCES = $(HEADS) $(SRCS)
-
-bp@PDP_SUFFIX@___LDADD =\
-	$(abs_top_builddir)/src/pdp/libpdp@PDP_SUFFIX@.la \
-	$(abs_top_builddir)/src/tamisc/libtamisc@PDP_SUFFIX@.la \
-	$(abs_top_builddir)/src/ta/libta@PDP_SUFFIX@.la \
-	$(abs_top_builddir)/src/css/libcss@PDP_SUFFIX@.la
-
-bp@PDP_SUFFIX@___CPPFLAGS =\
+lib_LTLIBRARIES = libbp_TypeAccess@PDP_SUFFIX@.la
+libbp_TypeAccess@PDP_SUFFIX@_la_SOURCES = bp_TA.cpp bp_TA_type.h bp_TA_inst.h
+libbp_TypeAccess@PDP_SUFFIX@_la_CPPFLAGS =\
 	-I@abs_top_builddir@ \
 	-I@abs_srcdir@ \
 	-I@srcdir@/../ta \
@@ -46,8 +35,23 @@ bp@PDP_SUFFIX@___CPPFLAGS =\
 	-I@srcdir@/../tamisc \
 	-I@srcdir@/../css \
 	-I@srcdir@/../taiqtso
-BUILT_SOURCES = bp_TA_type.h
+libbp_TypeAccess@PDP_SUFFIX@_la_CXXFLAGS = -O0
+
+bin_PROGRAMS = bp@PDP_SUFFIX@++
+bp@PDP_SUFFIX@___DEPENDENCIES = libbp_TypeAccess@PDP_SUFFIX@.la
+bp@PDP_SUFFIX@___SOURCES = $(HEADS) $(SRCS)
+bp@PDP_SUFFIX@___LDADD =\
+	$(abs_top_builddir)/src/bp/libbp_TypeAccess@PDP_SUFFIX@.la \
+	$(abs_top_builddir)/src/pdp/libpdp@PDP_SUFFIX@.la \
+	$(abs_top_builddir)/src/tamisc/libtamisc@PDP_SUFFIX@.la \
+	$(abs_top_builddir)/src/ta/libta@PDP_SUFFIX@.la \
+	$(abs_top_builddir)/src/css/libcss@PDP_SUFFIX@.la
+bp@PDP_SUFFIX@___CPPFLAGS = $(libbp_TypeAccess@PDP_SUFFIX@_la_CPPFLAGS)
+bp@PDP_SUFFIX@___CXXFLAGS = -g -O2
+
+BUILT_SOURCES = bp_TA_type.hx
 CLEANFILES += bp_TA.ccx
+
 #**************************************************
 #
 #                      GUI
