many changes to DataTable and Matrix -- leaves src broken

--- a/src/pdp/Makefile.am
+++ b/src/pdp/Makefile.am
@@ -46,9 +46,9 @@ TAHEADS =\
 	@abs_srcdir@/spec.h \
 	@abs_srcdir@/netstru.h \
 	@abs_srcdir@/netstru_extra.h \
+	@abs_srcdir@/netdata.h \
 	@abs_srcdir@/enviro.h \
 	@abs_srcdir@/enviro_extra.h \
-	@abs_srcdir@/event.h \
 	@abs_srcdir@/process.h \
 	@abs_srcdir@/stats.h \
 	@abs_srcdir@/pdplog.h \
@@ -63,9 +63,9 @@ HEADS =\
 	spec.h \
 	netstru.h \
 	netstru_extra.h \
+	netdata.h \
 	enviro.h \
 	enviro_extra.h \
-	event.h \
 	process.h \
 	stats.h \
 	sched_proc.h \
@@ -80,9 +80,9 @@ SRCS =\
 	spec.cpp \
 	netstru.cpp \
 	netstru_extra.cpp \
+	netdata.cpp \
 	enviro.cpp \
 	enviro_extra.cpp \
-	event.cpp \
 	process.cpp \
 	stats.cpp \
 	sched_proc.cpp \
