Fixed OpenGL check always reporting no on linux. Now using postgresqls PGAC_CHECK_READLINE (verified it is newer X11 style BSD license and not classic BSD license for GPL compatability). VL_LIB_READLINE was somehow broken and the code was so confabulated I couldnt read it. Maketa rules were not copying .hx to .h in bp for some reason so they get a complete rewrite in Maketa.am (its by far the best iteration yet). Added several AC_CACHE_SAVEs which speeded up configure considerably after the first run. Excepting Brads latest commit, system verified to build on linux/osx.

--- a/Makefile.am
+++ b/Makefile.am
@@ -38,7 +38,8 @@ DISTCLEANFILES =\
 	src/leabra/do-mfstamp \
 	src/bp/do-mfstamp \
 	src/maketa/mfstamp \
-	src/maketa/do-mfstamp
+	src/maketa/do-mfstamp \
+	src/ta/ta_TA.ccx
 
 endif
 
