--- a/Maketa.am
+++ b/Maketa.am
@@ -1,31 +1,31 @@
-# This location of maketa is consistent to all subprojects in our heirarchy 
-MAKETA = ../maketa/./maketa
-
-# Rules for running maketa. In order to avoid a race condition, we only
-# check for the updatedness of *TA_type.h, and assume TA_inst.h and TA.cpp
-# based on the results of it. (Without this cluster builds are not possible)
-
-# Notice that if you try to run maketa, if maketa does not exist it will build
-# it for you first (or die trying).
-
+# Rules for running maketa
+# To avoid race conditions on parallel builds we only refer
+# directly to ${PROJNAME}_TA_type.
 ${PROJNAME}_TA_type.h:	${PROJNAME}_TA_type.hx
-	if  [ -e ${PROJNAME}_TA_type.h -a -e ${PROJNAME}_TA_inst.h -a -e ${PROJNAME}_TA.cpp ];\
-	then (cmp -s ${PROJNAME}_TA_type.hx ${PROJNAME}_TA_type.h) || (cp ${PROJNAME}_TA_type.hx ${PROJNAME}_TA_type.h);\
-		(cmp -s ${PROJNAME}_TA_inst.hx ${PROJNAME}_TA_inst.h) || (cp ${PROJNAME}_TA_inst.hx ${PROJNAME}_TA_inst.h);\
-		(cmp -s ${PROJNAME}_TA.ccx ${PROJNAME}_TA.cpp) || (cp ${PROJNAME}_TA.ccx ${PROJNAME}_TA.cpp);\
-	else ${MAKE} ${PROJNAME}_TA_type.hx;fi
+${PROJNAME}_TA_type.hx: ${TAHEADS}
+	if ! cmp -s ${PROJNAME}_TA_type.hx ${PROJNAME}_TA_type.h; then \
+		${MAKE} force_ta; fi
+${TAHEADS}:
 
-${PROJNAME}_TA_type.hx:	${TAHEADS}
-	if [ ! -z ../maketa/./maketa ];\
-	then cd ../maketa;${MAKE};fi
-	if  [ ! -e ${PROJNAME}_TA_type.h -o ! -e ${PROJNAME}_TA_inst.h -o ! -e ${PROJNAME}_TA.cpp ];\
-	then touch -t 199912311700.00 ${PROJNAME}_TA_type.h ${PROJNAME}_TA_inst.h ${PROJNAME}_TA.cpp;fi
-	${MAKETA} ${MAKETA_FLAGS} ${PROJNAME} ${TAHEADS}
+# You can call `make force_ta' directly in any directory.
+# If you call it in the top directory it will be run in
+# every directory that uses maketa.
+force_ta:
+#	# If maketa doesn't exist make it
+	${MAKE} --directory=../maketa ${AM_MAKEFLAGS}
 
-${TAHEADS}:	
+#	# If the final TA files don't exist, create empty ones. (solves chicken/egg)
+	if [ ! -e ${PROJNAME}_TA_type.h ]; then \
+		touch -t 0412312359 ${PROJNAME}_TA_type.h ${PROJNAME}_TA_inst.h ${PROJNAME}_TA.cpp;fi
 
-# force_ta does not currently work if ta is up to date, so run make clean first.
-force_ta:	${PROJNAME}_TA_type.hx
+#	# Run maketa on TAHEADS
+	../maketa/./maketa ${MAKETA_FLAGS} ${PROJNAME} ${TAHEADS}
+
+#	# Copy the cache file over to the main file.
+	cp ${PROJNAME}_TA_type.hx ${PROJNAME}_TA_type.h
+	cp ${PROJNAME}_TA_inst.hx ${PROJNAME}_TA_inst.h
+	cp ${PROJNAME}_TA.ccx ${PROJNAME}_TA.cpp
+
 
 # Instruct automake to clean these files on make clean
 CLEANFILES =\
@@ -34,7 +34,7 @@ CLEANFILES =\
 	${PROJNAME}_TA.cpp \
 	${PROJNAME}_TA_type.hx \
 	${PROJNAME}_TA_inst.hx \
-	${PROJNAME}_TA.cxx
+	${PROJNAME}_TA.ccx
 
 # Maketa needs to see everything EXCEPT abs_top_builddir. See below for why.
 # TODO: detect /lib/cpp on the particular os so as to genericize our build to any os
@@ -74,7 +74,6 @@ MAKETA_FLAGS +=\
 	-I@abs_srcdir@/../..
 
 endif
-
 
 # These are currently the only defines we are setting on the command line. Theoretically
 # We don't need them (they are set in config.h) , but it doesn't work without them.
