*Added configuration message at the very end. I borrowed it from the Free Edition of Coin which is GPL'ed. To add more use SIM_AC_CONFIGURATION_SETTING and SIM_AC_CONFIGURATION_WARNING. Currently looks like the following, and I added many more warnings which aren't shown here since there are no problems with the build. If you guys want other things just send me a note:
PDP++ configuration settings:
  GUI:           Disabled
  MPI:           Enabled
  Debuging:      Enabled
  Optimization:  -g -O0
  Mangling:      Enabled. Prototype of bins\libs is pdp_nogui_debug_mpi++\libpdp_nogui_debug_mpi.a

*Maketa is still independent but no longer has its own configure script. This was necessary in order to support the configuration message, as the maketa configure always ran after it was printed. Cached configure now runs in ~7 seconds!

*Added `make ifnames' to top-level configure for printing all the package defines

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,8 +6,8 @@ dist_pkgdata_DATA = AUTHORS ChangeLog COPYING COPYING.LIB INSTALL NEWS README
 # SUBDIRS tells the autotools which directories have Makefile.am's in them.
 # If you remove/add one of SUBDIRS, be sure to do the same at the bottom of configure.ac
 
-DIST_SUBDIRS = src/maketa src/taiqtso src/ta src/css src/tamisc src/pdp src/leabra src/bp
-SUBDIRS = src/maketa @WANT_TAIQTSO@ src/ta src/css src/tamisc src/pdp src/leabra src/bp
+DIST_SUBDIRS = src/maketa src/taiqtso src/ta src/css src/tamisc src/pdp src/leabra src/bp manual
+SUBDIRS = src/maketa @WANT_TAIQTSO@ src/ta src/css src/tamisc src/pdp src/leabra src/bp manual
 
 EXTRA_DIST +=\
 	src/ta/ios-g++-3.1
@@ -30,6 +30,7 @@ DISTCLEANFILES =\
 	do-mfstamp-am \
 	mfstamp \
 	do-mfstamp \
+	manual/do-mfstamp \
 	src/taiqtso/do-mfstamp \
 	src/ta/do-mfstamp \
 	src/css/do-mfstamp \
@@ -74,3 +75,7 @@ force_ta:
 	cd ${abs_top_builddir}/src/pdp && ${MAKE} force_ta
 	cd ${abs_top_builddir}/src/leabra && ${MAKE} force_ta
 	cd ${abs_top_builddir}/src/bp && ${MAKE} force_ta
+
+ifnames:
+	ifnames `find -name "*.cpp" -printf '%p ' -o -name "*.h" -printf '%p '` > ifnames.log
+	echo "Defines printed to ifnames.log"
